# repo-house-prices-art

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/816166779378113440/: meta.yaml
mlruns/816166779378113440/0e96930dd58849ecbda8a0bf73cb9c08/: meta.yaml
mlruns/816166779378113440/16c79776fe344b4aa190d83cfe2751f7/: meta.yaml
mlruns/816166779378113440/17ae303843c34e098d94a018b5706cc8/: meta.yaml
mlruns/816166779378113440/1eb363f109a342a5838ed49619a7dae2/: meta.yaml
mlruns/816166779378113440/21580f3859cf42f9970d16883f924113/: meta.yaml
mlruns/816166779378113440/357a0220267a4477bff57ef1f0365e25/: meta.yaml
mlruns/816166779378113440/40cd552bbcbc4936ba3e2a79ad0a30c9/: meta.yaml
mlruns/816166779378113440/51bc84f9a83449b7b52cb0199a68d575/: meta.yaml
mlruns/816166779378113440/5c0931865c1d4c9ebaa73a088872a0a6/: meta.yaml
mlruns/816166779378113440/69030189b1194fabaa05913403523148/: meta.yaml
mlruns/816166779378113440/6e84f1b6bb9b432496832ba83f4f8736/: meta.yaml
mlruns/816166779378113440/75444927197141759eec2ecae1abf396/: meta.yaml
mlruns/816166779378113440/790d487855e94f8093aa3d1bf7e9ae9a/: meta.yaml
mlruns/816166779378113440/7f9017f6fe9b4442b4d1644559f87a39/: meta.yaml
mlruns/816166779378113440/93c243fd7403410aad426a520ce185ce/: meta.yaml
mlruns/816166779378113440/956cacaa7f984a4d906922ae905dc5d2/: meta.yaml
notebooks/: 00_Scratchpad.ipynb  01_Data_Exploration.ipynb  02_Feature_Creation.ipynb  03_Model_Training.ipynb  04_Inference_Calculation.ipynb
production/: feature_eng_creation.py  operators.py
(+82 files in other folders)
