[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "production"
version = "0.0.1"
description = "En este proyecto se implementa un modelo de regresion para predecir el precio de una casa"
authors = [
  { name = "Daniel Camargo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["production"]
include = ["pyproject.toml", "production/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["production"]
force-sort-within-sections = true

